# parsing-with-flying-colours

./: compile.sh  cs2104.csv  lab03.hs
lab03/: compile.sh  cs2104.csv  lab03.hs
lab04/: README.md  lab04.cabal
lab04/app/: Main.hs
lab04/src/: Lab04.hs
