name:                lab04
version:             0.1.0.0
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lab04
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , mtl
  default-language:    Haskell2010

executable lab04-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lab04
                     , parsec
  default-language:    Haskell2010
